[gd_scene load_steps=4 format=3 uid="uid://blmv0tqwcbn4s"]

[ext_resource type="Script" path="res://components/default_action_comp.gd" id="1_dckwc"]
[ext_resource type="Script" path="res://components/Polygon2D.gd" id="2_np0wa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dya2i"]

[node name="DefaultAttackComp" type="Area2D"]
light_mask = 2
collision_layer = 32
script = ExtResource("1_dckwc")

[node name="AttackAnimation" type="AnimatedSprite2D" parent="."]

[node name="AttackRangeShape" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 32
shape = SubResource("CircleShape2D_dya2i")
debug_color = Color(0.843137, 0.294118, 0.619608, 0.756863)

[node name="Polygon2D" type="Node2D" parent="AttackRangeShape"]
rotation = 2.28427
script = ExtResource("2_np0wa")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
